tests/pass/Cond.java
package pass;

import java.lang.System;

public class Cond {
	public int cond(bool x, int y, int z) {
		return x ? y : z;
	}
}
