tests/fail/Cond.java
package fail;

import java.lang.System;

public class Cond {
	public static void main(String[] args) {
		System.out.println("12" ? 10 : 20);
	}
}
